# genshin-lyre-auto-play-without-midi

./: README.md  config.py  focus.py  logger.py  main.py  pyproject.toml  requirements.txt  安装依赖.bat  山巅雪国的记忆.txt  开始演奏.bat  热爱105度的你.txt  阿瑠.txt
spectrums/: README.md  夜の歌-手机谱.txt  夜の歌.txt  山巅雪国的记忆.txt  热爱105度的你.txt  阿瑠-手机谱.txt  阿瑠.txt
utils/: focus.py  logger.py  pressKey.py
